Fix: plugin layout z-index error

--- a/app/core/renderer/styles/index.scss
+++ b/app/core/renderer/styles/index.scss
@@ -100,7 +100,7 @@ span.tag {
     opacity: 1;
     pointer-events: unset;
   }
-  z-index: 1000;
+  z-index: 100000;
   position: absolute;
 
   top: 0;
